[gd_scene load_steps=7 format=3 uid="uid://c0wa58dx5kigj"]

[ext_resource type="Script" path="res://Scripts/gun_enemy.gd" id="1_xelk1"]
[ext_resource type="Texture2D" uid="uid://dg67cbjc063v7" path="res://Assets/Sprites/assetsStage2/Farmer 2.png" id="2_v6m72"]

[sub_resource type="Curve" id="Curve_w7pci"]
_data = [Vector2(0.0674157, 0.956044), 0.0, 0.0, 0, 0, Vector2(0.859551, 0.175824), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_w5fw7"]
radius = 19.6469

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pngqo"]
bg_color = Color(1, 0, 0, 0.47451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwgvi"]
bg_color = Color(1, 0, 0, 1)

[node name="gunEnemy" type="Node2D"]
script = ExtResource("1_xelk1")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_v6m72")
offset = Vector2(0, -9)

[node name="deathParticles" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 70.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_w7pci")
color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="." groups=["enemyArea2D"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w5fw7")

[node name="deathTimer" type="Timer" parent="."]

[node name="shootTimer" type="Timer" parent="." groups=["enemyBullet"]]
wait_time = 2.0
autostart = true

[node name="healthBar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = -39.0
offset_right = 26.0
offset_bottom = -31.0
theme_override_styles/background = SubResource("StyleBoxFlat_pngqo")
theme_override_styles/fill = SubResource("StyleBoxFlat_uwgvi")
value = 100.0
fill_mode = 1
show_percentage = false

[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
